     incorrect results in some variable-cell calculations. Also in
     variable-cell: last scf step could crash due to insufficient
     FFT grid if the final cell was larger than the initial one
   * PW: minor bug in damped dynamics (hessian matrix incorrectly reset)
   * PW: bug in LDA+U forces for the Gamma-only case
   * Electron-Phonon code wasn't working any longer in serial execution
   * PWCOND: fixed bug when the write/read option is used for the case 
     of different leads. 
   * NEB + nonlocal exchange (DF-vdW) or hybrid functionals wasn't working
   * NEB: incorrect parsing of intermediate images fixed
   * HSE numerical problems in function expint
   * XSPECTRA wasn't working any longer due to missing updates to
     read_file_xspectra.f90
   * epsilon.f90: the term 1 must be added to diagonal components only! 

New in 4.3 version:

  * CP only, experimental: parallelization over Kohn-Sham states
  * Dispersion interactions (van der Waals) with nonlocal functional
  * Additions to projwfc: k-resolved DOS, LDOS integrated in selected
    real-space regions
  * Constant-volume variable-cell optimization
  * Non-colinear and spin-orbit PAW
  * Penalty functional technique in DFT+U calculations (CP only)

Incompatible changes in 4.3 version:

  * pw.x no longer performs NEB calculations. NEB is now computed
    by a separate code, NEB/neb.x . NEB-specific variables are no longer
    read by pw.x; they are read by neb.x after all pw.x variables
  * NEB for cp.x no longer available
  * iq1,iq2,iq3 removed from input in ph.x; use start_q, last_q instead
  * Several global variables having the same meaning and different names
    in CP and in all the other codes (PW) have been given a common name.
    Calls to fft also harmonized to the CP interface fwfft/invfft:
	Old (CP)	New (PW)	Old (PW)	New (CP)
	nnr/nnrx	nrxx		nrx[123]	nr[123]x
	nnrs/nnrsx	nrxxs		nrx[123]s	nr[123]sx
	ngml		ngl		ig[123]		mill (replaces mill_l)
	ngmt		ngm_g